fix(rendering-performance): do not display on mobile. adapt to screen width

--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -2,6 +2,7 @@
   background: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
+  z-index: 99999;
 }
 
 .retro-window {
